implement cache by Redis
