# internal/data/pets_list_response.go
@@ -1,10 +1,12 @@
 package data
 
+type PetsListMeta struct {
+	Page  int `json:"page"`
+	Limit int `json:"limit"`
+	Total int `json:"total"`
+}
+
 type PetsListResponse struct {
-	Items []Pet `json:"items"`
-	Meta  struct {
-		Page  int `json:"page"`
-		Limit int `json:"limit"`
-		Total int `json:"total"`
-	} `json:"meta"`
+	Items []Pet        `json:"items"`
+	Meta  PetsListMeta `json:"meta"`
 }
